# texsch

./: .gitignore  LICENSE  README.md  build-wasm.sh
core/: Cargo.toml  build.rs
core/examples/: smoke.rs
core/src/: kicad.rs  kicad_sym.rs  lib.rs  parser.rs  svg.rs
web/: index.html  package.json
web/src/: App.vue  style.css
