[package]
name = "texsch"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.23.1", features = ["v4", "js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.23.1", features = ["v4"] }
